# FalconMC

./: .gitignore  .tokeignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
crates/block_parser/: Cargo.toml
crates/block_parser/src/: data.rs  extension.rs  functionality.rs  lib.rs  main.rs  properties.rs  raw.rs  tests.rs
crates/block_parser/src/util/: convert.rs  data.rs  mod.rs  processing.rs  properties.rs  raw.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  errors.rs  lib.rs  server.rs  shutdown.rs
crates/core/src/data/: identifier.rs  mod.rs
crates/core/src/network/: connection.rs  mod.rs  util.rs
crates/core/src/network/buffer/: mod.rs  read.rs  write.rs
crates/core/src/network/connection/: mod.rs  wrapper.rs
crates/core/src/network/packet/: mod.rs  packet_macros.rs
crates/core/src/player/: data.rs  mod.rs
crates/core/src/schematic/: mod.rs
crates/core/src/server/: config.rs  data.rs  mod.rs
crates/core/src/world/: block_util.rs  blocks.rs  chunks.rs  dimension.rs  mod.rs  palette.rs
crates/core_derive/: Cargo.toml
crates/core_derive/src/: lib.rs
crates/default_protocol/: Cargo.toml
crates/default_protocol/src/: error.rs  errors.rs  lib.rs  macros.rs
crates/default_protocol/src/clientbound/: mod.rs
crates/default_protocol/src/clientbound/specs/: mod.rs  play.rs  status.rs
crates/default_protocol/src/clientbound/v1_12_2/: play.rs
crates/default_protocol/src/clientbound/v1_13/: play.rs
crates/default_protocol/src/clientbound/v1_8_9/: login.rs  play.rs  status.rs
crates/default_protocol/src/clientbound/v1_9/: play.rs
crates/default_protocol/src/clientbound/v1_9_1/: play.rs
crates/default_protocol/src/serverbound/: mod.rs  v1_8_9.rs
crates/default_protocol/src/serverbound/v1_12_2/: play.rs
crates/default_protocol/src/serverbound/v1_8_9/: handshake.rs  login.rs  mod.rs  play.rs  status.rs
crates/default_protocol/src/serverbound/v1_9/: play.rs
crates/default_protocol/src/version/: mod.rs  status.rs
crates/default_protocol/src/version/v1_12_2/: mod.rs  play.rs
crates/default_protocol/src/version/v1_13/: mod.rs  play.rs  send.rs  util.rs
crates/default_protocol/src/version/v1_13_2/: login.rs  mod.rs  play.rs  send.rs
crates/default_protocol/src/version/v1_8_9/: login.rs  mod.rs  play.rs  status.rs
crates/default_protocol_derive/: Cargo.toml
crates/default_protocol_derive/src/: lib.rs  packet_mod.rs
crates/logic/: Cargo.toml
crates/logic/src/: lib.rs
crates/logic/src/connection/: codec.rs  handler.rs  mod.rs  reader.rs  tick.rs  wrapper.rs  writer.rs
crates/logic/src/player/: mod.rs  wrapper.rs
crates/logic/src/server/: command.rs  login.rs  mod.rs  play.rs  status.rs  tick.rs  wrapper.rs
crates/logic/src/server/network/: login.rs  mod.rs  play.rs  status.rs
crates/logic/src/world/: cache.rs  mod.rs
crates/main/: Cargo.toml
crates/main/src/: error.rs  main.rs
crates/main/src/network/: connection.rs  mod.rs
crates/main/src/player/: mod.rs
crates/main/src/server/: console.rs  mod.rs
crates/packet_core/: Cargo.toml
crates/packet_core/src/: error.rs  lib.rs  test.rs
crates/packet_core/src/primitives/: array.rs  bytes.rs  iter.rs  mod.rs  num.rs  str.rs  tests.rs  vec.rs
crates/packet_core/src/special/: bufres.rs  counter.rs  mod.rs  packet.rs  reader.rs  uuid.rs  writer.rs
crates/packet_core_derive/: Cargo.toml
crates/packet_core_derive/src/: kw.rs  lib.rs  util.rs
crates/packet_core_derive/src/attributes/: asref.rs  bytes.rs  convert.rs  link.rs  macros.rs  mod.rs  nbt.rs  string.rs  varint.rs  vec.rs
crates/packet_core_derive/src/read/: check.rs  generate.rs  mod.rs
crates/packet_core_derive/src/size/: check.rs  generate.rs  mod.rs
crates/packet_core_derive/src/write/: attributes.rs  check.rs  generate.rs  mod.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: error.rs  lib.rs  macros.rs  manager.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: errors.rs  lib.rs  macros.rs  manager.rs
crates/protocol_derive/: Cargo.toml
crates/protocol_derive/src/: kw.rs  lib.rs  packet_mod.rs
crates/protocol_util/: Cargo.toml
crates/protocol_util/src/: fn_name.rs  lib.rs  packet_versions.rs
crates/receive/: Cargo.toml
crates/receive/src/: lib.rs  macros.rs
crates/receive/src/v1_12_2/: mod.rs  play.rs
crates/receive/src/v1_8_9/: handshake.rs  login.rs  mod.rs  play.rs  status.rs
crates/receive/src/v1_9/: mod.rs  play.rs
crates/receive_derive/: Cargo.toml
crates/receive_derive/src/: data.rs  kw.rs  lib.rs  util.rs
crates/send/: Cargo.toml
crates/send/src/: batch.rs  lib.rs  macros.rs  util.rs
crates/send/src/specs/: login.rs  play.rs  status.rs
crates/send/src/v1_12_2/: mod.rs  play.rs
crates/send/src/v1_13/: play.rs
crates/send/src/v1_14/: play.rs
crates/send/src/v1_16/: login.rs  mod.rs
crates/send/src/v1_8_9/: login.rs  mod.rs  play.rs  status.rs
crates/send/src/v1_9/: play.rs
crates/send/src/v1_9_1/: play.rs
falcon_core/: Cargo.toml
falcon_core/src/: config.rs  lib.rs  network.rs  player.rs  shutdown.rs
falcon_network/: Cargo.toml
falcon_network/src/: reader.rs  writer.rs
falcon_packet/: Cargo.toml
falcon_packet/falcon_packet_core/: Cargo.toml
falcon_packet/falcon_packet_core/src/: data.rs  kw.rs  lib.rs  processing.rs  tests.rs  traits.rs
falcon_packet/falcon_packet_derive/: Cargo.toml  README.md
falcon_packet/falcon_packet_derive/src/: lib.rs
falcon_packet/src/: error.rs  lib.rs  macro_traits.rs  primitives.rs  pub_macro.rs
falcon_packet/src/primitives/: arrays.rs  boolean.rs  bytes.rs  nbt.rs  num.rs  rest.rs  slices.rs  string.rs  util.rs  uuid.rs  vec.rs
falcon_packet/tests/: integration_test.rs
falcon_protocol/: Cargo.toml
falcon_protocol/falcon_protocol_core/: Cargo.toml  README.md
falcon_protocol/falcon_protocol_core/src/: check.rs  data.rs  generate.rs  lib.rs  tests.rs
falcon_protocol/falcon_protocol_derive/: Cargo.toml
falcon_protocol/falcon_protocol_derive/src/: lib.rs
falcon_protocol/src/: lib.rs  pub_macro.rs
falcon_protocol/tests/: integration.rs
(+23 files in other folders)
