[package]
name = "falcon_core"
version = "0.3.0"
edition = "2021"
publish = [ "falconmc" ]
description = "Base crate of the falcon ecosystem"
license-file = "../LICENSE"
repository = "https://github.com/FalconMC-Dev/FalconMC"

# warning: manifest has no description, license, license-file, documentation, homepage or repository.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
uuid = "1.3.1"
serde = { version = "1.0.160", features = [ "derive" ] }
tokio = { version = "1.27.0", features = [ "sync", "net",  "tracing" ] }

[dev-dependencies]
serde_test = "1.0.160"
tokio = { version = "1.27.0", features = [ "sync", "net", "tracing", "macros", "rt", "rt-multi-thread" ]}
