[package]
name = "falcon_packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
thiserror = "1.0.37"
uuid = "1.3.0"
fastnbt = "2.4.3"
serde = "1.0.159"
castaway = "0.2.2"

[features]
verbose-test = []
