[package]
name = "falcon_packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_packet_derive = { path = "falcon_packet_derive" }
bytes = "1.4.0"
thiserror = "1.0.40"
uuid = "1.3.1"
fastnbt = "2.4.3"
serde = "1.0.160"
castaway = "0.2.2"

[features]
verbose-test = []

[dev-dependencies]
falcon_packet_core = { path = "falcon_packet_core"}
