[package]
name = "falcon_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_protocol_derive = { path = "falcon_protocol_derive" }
falcon_packet = { path = "../falcon_packet" }
bytes = "1.4.0"
downcast-rs = "1.2.0"
