[package]
name = "falcon_block_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "falcon-block-parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.139", features = [ "derive" ] }
serde_json = "1.0.82"
quote = "1.0.20"
syn = { version = "1.0.98", features = [ "full" ] }
proc-macro2 = "1.0.40"
rustfmt-wrapper = "0.2.0"

convert_case = "0.5.0"
ahash = "0.7.6"
linked-hash-map = { version = "0.5.6", features = [ "serde_impl" ] }

