[package]
name = "falcon_block_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "falcon-block-parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.144", features = [ "derive" ] }
serde_json = "1.0.83"
quote = "1.0.21"
syn = { version = "1.0.99", features = [ "full" ] }
proc-macro2 = "1.0.43"
rustfmt-wrapper = "0.2.0"

convert_case = "0.5.0"
ahash = "0.8.0"
linked-hash-map = { version = "0.5.6", features = [ "serde_impl" ] }

