[package]
name = "falcon_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_core_derive = { path = "../core_derive" }

tracing = "0.1.35"
thiserror = "1.0.31"

ahash = { version = "0.7.6", features = [ "serde" ] }
fastnbt = "2.2.0"
serde = { version = "1.0.139", features = [ "derive" ] }
confy = "0.4.0"

once_cell = "1.13.0"
uuid = "1.1.2"
bytes = "1.2.0"
nom = "7.1.1"

mc_chat = "0.3.0"

tokio = { version = "1.20.0", features = [ "rt-multi-thread", "rt", "time", "net", "sync", "macros" ] }
