[package]
name = "falcon_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_core_derive = { path = "../core_derive" }

tracing = "0.1.36"
thiserror = "1.0.32"

ahash = { version = "0.8.0", features = [ "serde" ] }
fastnbt = "2.3.2"
serde = { version = "1.0.144", features = [ "derive" ] }
confy = "0.4.0"

once_cell = "1.13.1"
uuid = "1.1.2"
bytes = "1.2.1"
nom = "7.1.1"

mc_chat = "0.3.0"

tokio = { version = "1.20.1", features = [ "rt-multi-thread", "rt", "time", "net", "sync", "macros", "tracing" ] }
