[package]
name = "falcon_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
thiserror = "1.0.37"

ahash = { version = "0.8.0", features = [ "serde" ] }
fastnbt = "2.3.2"
serde = { version = "1.0.145", features = [ "derive" ] }
confy = "0.5.0"

once_cell = "1.15.0"
uuid = "1.2.1"
bytes = "1.2.1"
nom = "7.1.1"

mc_chat = "0.3.0"

tokio = { version = "1.21.2", features = [ "rt-multi-thread", "rt", "time", "net", "sync", "macros", "tracing" ] }
