[package]
name = "falcon_default_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_default_protocol_derive = { path = "../default_protocol_derive" }
falcon_core = { path = "../core" }

tracing = { version = "0.1" }
error-chain = "0.12"

uuid = { version = "0.8", features = [ "v3" ] }
derive-new = "0.5"
ignore-result = "0.2"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"