[package]
name = "falcon_default_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_default_protocol_derive = { path = "../default_protocol_derive" }
falcon_core = { path = "../core" }

tracing = "0.1.30"
error-chain = "0.12.4"

uuid = { version = "0.8.2", features = [ "v3" ] }
derive-new = "0.5.9"
ignore-result = "0.2.0"

serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = [ "full" ] }
