[package]
name = "falcon_default_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_default_protocol_derive = { path = "../default_protocol_derive" }
falcon_core = { path = "../core" }

tracing = "0.1.30"
thiserror = "1.0.30"

uuid = { version = "0.8.2", features = [ "v3" ] }
derive-new = "0.5.9"
ignore-result = "0.2.0"

fastnbt = { git = "https://github.com/owengage/fastnbt", branch = "dev/serializer" }
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = [ "full" ] }
