[package]
name = "falcon_logic"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_core = { path = "../core" }
falcon_send = { path = "../send" }

mc_chat = "0.3.0"

tracing = "0.1.36"
itertools = "0.10.3"

uuid = { version = "1.1.2", features = [ "v3" ] }
bytes = "1.2.1"
ignore-result = "0.2.0"
ahash = "0.7.6"

tokio = { version = "1.20.1", features = [ "net", "time" ]}
tokio-util = { version = "0.7.3", features = [ "codec" ] }
futures = "0.3.21"
