[package]
name = "falcon_logic"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_core = { path = "../core" }
falcon_packet_core = { path = "../packet_core/" }
falcon_send = { path = "../send" }

mc_chat = "0.3.0"

tracing = "0.1.36"
itertools = "0.10.3"
flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }

uuid = { version = "1.1.2", features = [ "v3" ] }
bytes = "1.2.1"
ignore-result = "0.2.0"
thiserror = "1.0.37"
ahash = "0.8.0"

tokio = { version = "1.20.1", features = [ "net", "time", "tracing", "io-util" ]}
