[package]
name = "falcon_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "falcon-mc"
path = "src/main.rs"

[dependencies]
falcon_core = { path = "../core" }
falcon_receive = { path = "../receive" }
falcon_logic = { path = "../logic" }
mc_chat = "0.3.0"

tracing = "0.1.32"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.9", features = [ "local-time" ] }
tracing-appender = "0.2.2"

anyhow = "1.0.56"
ignore-result = "0.2.0"

flate2 = "1.0.22"
fastnbt = "1.3.0"
ahash = "0.7.6"
uuid = "0.8.2"

tokio = { version = "1.17.0", features = [ "full" ] }
bytes = { version = "1.1.0", features = [ "std" ] }
