[package]
name = "falcon_packet_core_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.99", features = [ "extra-traits" ] }
quote = "1.0.21"
proc-macro2 = "1.0.43"
falcon_proc_util = { path = "../proc_util/" }

indexmap = "1.9.1"
derivative = "2.2.0"
