[package]
name = "falcon_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_core = { path = "../core" }

abi_stable = "0.10.4"

tracing = "0.1.32"
thiserror = "1.0.30"

libloading = "0.7.3"
once_cell = "1.10.0"
