[package]
name = "falcon_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_core = { path = "../core" }
falcon_default_protocol = { path = "../default_protocol" }

tracing = { version = "0.1" }
error-chain = "0.12"

libloading = "0.7"
once_cell = "1.8"
