[package]
name = "falcon_protocol_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_proc_util = { path = "../proc_util" }

syn = { version = "1.0.98", features = [ "full" ] }
itertools = { version = "0.10.3" }

