[package]
name = "falcon_receive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_core = { path = "../core" }
falcon_receive_derive = { path = "../receive_derive" }
falcon_logic = { path = "../logic" }
falcon_send = { path = "../send" }

mc_chat = "0.3.0"

tracing = "0.1.35"
thiserror = "1.0.31"
