[package]
name = "falcon_receive_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
falcon_proc_util = { path = "../proc_util" }
falcon_protocol_util = { path = "../protocol_util" }

syn = { version = "1.0.98", features = [ "full", "extra-traits" ] }
quote = "1.0.20"
proc-macro2 = "1.0.40"
