[package]
name = "falcon_send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_core = { path = "../core" }
falcon_protocol_derive = { path = "../protocol_derive" }

mc_chat = { version = "0.3.0", features = [ "serde" ] }
fastnbt = { version = "2.2.0" }
serde = "1.0.139"
serde_json = "1.0.82"

tracing = "0.1.35"

uuid = "1.1.2"
bytes = "1.1.0"
