[package]
name = "falcon_send"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_core = { path = "../core" }
falcon_send_derive = { path = "../send_derive" }

mc_chat = { version = "0.3.0", features = [ "serde" ] }
fastnbt = "2.3.2"
serde = "1.0.144"
serde_json = "1.0.83"

tracing = "0.1.36"

uuid = "1.1.2"
bytes = "1.2.1"
