[package]
name = "falcon_send"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon_core = { path = "../core" }
falcon_packet_core = { path = "../packet_core/" }
falcon_send_derive = { path = "../send_derive" }

mc_chat = { version = "0.3.0", features = [ "serde" ] }
fastnbt = "2.3.2"
serde = "1.0.145"
serde_json = "1.0.86"

tracing = "0.1.37"

uuid = "1.2.1"
bytes = "1.2.1"

derive-from-ext = "0.2.0"
