[package]
name = "falcon_packet_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
falcon_packet_core = { path = "../falcon_packet_core" }
proc-macro-error = "1.0"
proc-macro2 = "1.0"
